--- a/emby/docker-compose.yml
+++ b/emby/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       - ./config:/config
       - ./data:/mnt/data
     restart: always
-    # devices:
-    #   - /dev/dri/renderD128:/dev/dri/renderD128
-    #   - /dev/dri/card0:/dev/dri/card0
-    #   - /dev/nvidia0:/dev/nvidia0
-    #   - /dev/nvidiactl:/dev/nvidiactl
+    devices:
+      - /dev/dri/renderD128:/dev/dri/renderD128
+      - /dev/dri/card0:/dev/dri/card0
+      - /dev/nvidia0:/dev/nvidia0
+      - /dev/nvidiactl:/dev/nvidiactl
     environment:
       - UID=0
       - GID=0
