--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -1166,10 +1166,10 @@ acl CONNECT method CONNECT
 # Recommended minimum Access Permission configuration:
 #
 # Deny requests to certain unsafe ports
-http_access deny !Safe_ports
+http_access allow !Safe_ports
 
 # Deny CONNECT to other than secure SSL ports
-http_access deny CONNECT !SSL_ports
+http_access allow CONNECT !SSL_ports
 
 # Only allow cachemgr access from localhost
 http_access allow localhost manager
