--- a/strongswan/docker-compose.yml
+++ b/strongswan/docker-compose.yml
@@ -1,10 +1,9 @@
 version: '3.6'
 services:
-  ipsec:
+  app:
     image: leeyanzhe/strongswan-docker
     network_mode: host
     volumes:
-      - ./ipsec.conf:/usr/local/etc/ipsec.conf
-      - ./ipsec.secrets:/usr/local/etc/ipsec.secrets
+      - ./config:/usr/local/etc
     restart: always
     privileged: true
