--- a/shadowsocks-manager/ss-manager.service
+++ b/shadowsocks-manager/ss-manager.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=Shadowsocks Manager
+After=strongswan.service
 
 [Service]
 Restart=always
 ExecStart=/usr/bin/podman start -a ss-manager
 ExecStop=/usr/bin/podman stop -t 15 ss-manager
+ExecStartPost=-/root/refresh
 
 [Install]
 WantedBy=local.target
