--- a/docker-repo/docker-compose.yml
+++ b/docker-repo/docker-compose.yml
@@ -1,12 +1,32 @@
 version: '3.6'
 services:
-  v2-mirror:
+  docker-mirror:
     image: registry:2
     network_mode: host
     volumes:
-      - ./data:/var/lib/registry
-      - ./config.yml:/etc/config.yml
+      - ./repos/docker/data:/var/lib/registry
+      - ./repos/docker/config.yml:/etc/config.yml
     restart: always
     command: /etc/config.yml
     env_file:
-      - web.env
+      - ./repos/docker/web.env
+  gcr-mirror:
+    image: registry:2
+    network_mode: host
+    volumes:
+      - ./repos/gcr/data:/var/lib/registry
+      - ./repos/gcr/config.yml:/etc/config.yml
+    restart: always
+    command: /etc/config.yml
+    env_file:
+      - ./repos/gcr/web.env
+  quay-mirror:
+    image: registry:2
+    network_mode: host
+    volumes:
+      - ./repos/quay/data:/var/lib/registry
+      - ./repos/quay/config.yml:/etc/config.yml
+    restart: always
+    command: /etc/config.yml
+    env_file:
+      - ./repos/quay/web.env
