--- a/docker-repo/docker-compose.yml
+++ b/docker-repo/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.6'
 services:
   docker-mirror:
     image: registry:2
-    network_mode: host
+    #network_mode: host
     volumes:
       - ./repos/docker/data:/var/lib/registry
       - ./repos/docker/config.yml:/etc/config.yml
@@ -12,7 +12,7 @@ services:
       - ./repos/docker/web.env
   gcr-mirror:
     image: registry:2
-    network_mode: host
+    #network_mode: host
     volumes:
       - ./repos/gcr/data:/var/lib/registry
       - ./repos/gcr/config.yml:/etc/config.yml
@@ -22,7 +22,7 @@ services:
       - ./repos/gcr/web.env
   quay-mirror:
     image: registry:2
-    network_mode: host
+    #network_mode: host
     volumes:
       - ./repos/quay/data:/var/lib/registry
       - ./repos/quay/config.yml:/etc/config.yml
