--- a/v2ray/docker-compose.yml
+++ b/v2ray/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.6'
 services:
   v2ray:
     image: v2ray/official
-    # network_mode: host
+    expose:
+      - 80
     restart: always
     volumes:
       - ./config.json:/etc/v2ray/config.json
