--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -1,13 +1,24 @@
-version: '3.6'
+version: '2'
 services:
-  proxy:
-    image: jwilder/nginx-proxy:alpine
-    restart: always
-    network_mode: host
+  nginx:
+    image: nginx
+    container_name: nginx
+    ports:
+      - "443:443"
     volumes:
-      - ./custom.conf:/etc/nginx/conf.d/custom.conf
-      - ./ssl/certs/secp384r1.wildcard.example.com.pem:/etc/nginx/certs/example.com.crt:ro
-      - ./ssl/private/secp384r1.wildcard.example.com.key:/etc/nginx/certs/example.com.key:ro
+      - ./certs:/etc/nginx/certs:ro
+      - /etc/nginx/conf.d
+
+  dockergen:
+    image: jwilder/docker-gen
+    command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    volumes_from:
+      - nginx
+    volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-    # environment:
-    #   - DEFAULT_HOST=abc.example.com
+      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+
+  # whoami:
+  #   image: jwilder/whoami
+  #   environment:
+  #     - VIRTUAL_HOST=whoami.local
