--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   nginx:
     image: nginx
     container_name: nginx
-    ports:
-      - "443:443"
+    network_mode: host
     volumes:
       - ./certs:/etc/nginx/certs:ro
       - /etc/nginx/conf.d
