--- a/v2ray/docker-compose.yml
+++ b/v2ray/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.6'
 services:
   v2ray:
     image: v2ray/official
+    networks:
+      - proxied
     expose:
       - 80
     restart: always
