--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -3,14 +3,18 @@ services:
   nginx:
     image: nginx
     container_name: nginx
-    network_mode: host
+    ports:
+      - "443:443"
+    networks:
+      - proxied
     volumes:
       - ./certs:/etc/nginx/certs:ro
       - /etc/nginx/conf.d
 
   dockergen:
     image: jwilder/docker-gen
-    network_mode: host
+    networks:
+      - proxied
     command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     volumes_from:
       - nginx
@@ -20,7 +24,5 @@ services:
     # env_file:
     #   - default.env
 
-  # whoami:
-  #   image: jwilder/whoami
-  #   environment:
-  #     - VIRTUAL_HOST=whoami.local
+networks:
+  proxied:
