--- a/shadowsocks-manager/docker-compose.yml
+++ b/shadowsocks-manager/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     network_mode: host
     user: root
-    command: ["ss-manager", "-m", "chacha20", "-u", "--manager-address", "127.0.0.1:6001"]
+    command: ["ss-manager", "-m", "chacha20-ietf", "-u", "--manager-address", "127.0.0.1:6001"]
   ssmgr-s:
     image:
       gyteng/ssmgr
