--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: nginx
     container_name: nginx
     network_mode: host
+    restart: always
     volumes:
       - ./certs:/etc/nginx/certs:ro
       - ./conf.d:/etc/nginx/conf.d
@@ -11,6 +12,7 @@ services:
   dockergen:
     image: jwilder/docker-gen
     network_mode: host
+    restart: always
     command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     volumes_from:
       - nginx
