--- a/dnscrypt-proxy/docker-compose.yml
+++ b/dnscrypt-proxy/docker-compose.yml
@@ -2,5 +2,6 @@ version: '3.6'
 services:
   dnscrypt-server:
     image: jedisct1/dnscrypt-server
-    network_mode: host
+    ports: 
+      - "60053:443"
     restart: always
