--- a/frp/Dockerfile
+++ b/frp/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /etc
 
 RUN apk update \
     && apk add curl \
-    && VERSION=$(curl -s https://github.com/fatedier/frp/releases/latest |grep -oE '\d\.\d+\.\d+') \
+    && VERSION=$(curl -s https://github.com/fatedier/frp/releases/latest |grep -oP '\d\.\d+\.\d+') \
     && wget https://github.com/fatedier/frp/releases/download/v${VERSION}/frp_${VERSION}_linux_amd64.tar.gz \
     && mkdir frp \
     && tar -zvxf *.gz -C frp --strip-components=1
