--- a/frp/Dockerfile
+++ b/frp/Dockerfile
@@ -6,10 +6,12 @@ WORKDIR /etc
 
 RUN apk update \
     && apk add curl \
-    && VERSION=$(curl -s https://github.com/fatedier/frp/releases/latest |grep -oP '\d\.\d+\.\d+') \
+    && VERSION=$(curl -s https://github.com/fatedier/frp/releases/latest |grep -oE '\d\.\d+\.\d+') \
+    && echo "Got latest version = $VERSION" \
     && wget https://github.com/fatedier/frp/releases/download/v${VERSION}/frp_${VERSION}_linux_amd64.tar.gz \
     && mkdir frp \
-    && tar -zvxf *.gz -C frp --strip-components=1
+    && tar -zvxf *.gz -C frp --strip-components=1 \
+    && rm *.gz
 
 WORKDIR /etc/frp
 
