use leeyanzhe/v2ray

--- a/v2ray/docker-compose.yml
+++ b/v2ray/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 services:
   v2ray-s:
-    image: v2ray/official
+    image: leeyanzhe/v2ray
     container_name: v2ray-s
     expose:
       - 80
@@ -11,7 +11,7 @@ services:
     env_file:
       - web.env
   v2ray-c:
-    image: v2ray/official
+    image: leeyanzhe/v2ray
     container_name: v2ray-c
     network_mode: host
     restart: always
