--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -1,16 +1,21 @@
 FROM alpine:3.11 AS downloader
 
-WORKDIR /etc/v2ray
-
 RUN apk add -U --no-cache curl
 
-RUN VERSION=$(curl -s https://github.com/v2ray/v2ray-core/releases/latest |grep -oE '\d\.\d+\.\d+') \
-    && echo "Got latest version = $VERSION" \
-    && curl -Lo v2ray-linux-64.zip https://github.com/v2ray/v2ray-core/releases/download/v${VERSION}/v2ray-linux-64.zip \
-    && unzip v2ray-linux-64.zip \
-    && rm v2ray-linux-64.zip
+WORKDIR /etc/v2ray
+# Default OS type = linux
+ARG OS=linux
+# Default architecture = 64
+ARG ARCH=64
+# Download and unpack latest release from official github release
+RUN V2RAY_FILE=v2ray-${OS}-${ARCH}.zip \
+    VERSION=$(curl -s https://github.com/v2ray/v2ray-core/releases/latest |grep -oE '\d\.\d+\.\d+') \
+    && echo "Got latest version = ${VERSION}, file = ${V2RAY_FILE}" \
+    && curl -Lo $V2RAY_FILE https://github.com/v2ray/v2ray-core/releases/download/v${VERSION}/$V2RAY_FILE \
+    && unzip $V2RAY_FILE \
+    && rm $V2RAY_FILE
 
-# Use distroless as minimal base image to package the manager binary
+# Use distroless as minimal base image to package the executable binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 FROM gcr.io/distroless/static:latest
 WORKDIR /etc/v2ray
