--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine:3.11 AS downloader
 RUN apk add -U --no-cache curl
 
 WORKDIR /etc/v2ray
+# Configurable arguments defined at build time. User can override them by docker build --build-arg ARG_NAME=ARG_VALUE
 # Default OS type = linux
 ARG OS=linux
 # Default architecture = 64
@@ -17,6 +18,7 @@ RUN V2RAY_FILE=v2ray-${OS}-${ARCH}.zip \
 
 # Use distroless as minimal base image to package the executable binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
+# Note: Use gcr.azk8s.cn as repo-mirror if gcr.io is blocked by China GFW.
 FROM gcr.io/distroless/static:latest
 WORKDIR /etc/v2ray
 COPY --from=downloader /etc/v2ray .
