--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -20,6 +20,7 @@ RUN V2RAY_FILE=v2ray-${OS}-${ARCH}.zip \
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 # Note: Use gcr.azk8s.cn as repo-mirror if gcr.io is blocked by China GFW.
 FROM gcr.io/distroless/static:latest
+LABEL maintainer "Yanzhe Lee <lee.yanzhe@yanzhe.org>"
 WORKDIR /etc/v2ray
 COPY --from=downloader /etc/v2ray .
 ENTRYPOINT ["/etc/v2ray/v2ray"]
