--- a/frp/Dockerfile
+++ b/frp/Dockerfile
@@ -1,18 +1,26 @@
-FROM alpine
+FROM alpine:3.11 AS downloader
 
-LABEL maintainer="Yanzhe Lee"
+RUN apk add -U --no-cache curl
 
 WORKDIR /etc
+# Configurable arguments defined at build time. User can override them by docker build --build-arg ARG_NAME=ARG_VALUE
+# Default OS type = linux
+ARG OS=linux
+# Default architecture = 64
+ARG ARCH=amd64
+# Download and unpack latest release from official github release
+RUN VERSION=$(curl -s https://github.com/fatedier/frp/releases/latest |grep -oE '\d\.\d+\.\d+') \
+    && FILE=frp_${VERSION}_${OS}_${ARCH} \
+    && echo "Got latest version = ${VERSION}, file = ${FILE}" \
+    && curl -L https://github.com/fatedier/frp/releases/download/v${VERSION}/$FILE.tar.gz | tar xvz \
+    && mv $FILE frp
 
-RUN apk update \
-    && apk add curl \
-    && VERSION=$(curl -s https://github.com/fatedier/frp/releases/latest |grep -oE '\d\.\d+\.\d+') \
-    && echo "Got latest version = $VERSION" \
-    && wget https://github.com/fatedier/frp/releases/download/v${VERSION}/frp_${VERSION}_linux_amd64.tar.gz \
-    && mkdir frp \
-    && tar -zvxf *.gz -C frp --strip-components=1 \
-    && rm *.gz
-
+# Use distroless as minimal base image to package the executable binary
+# Refer to https://github.com/GoogleContainerTools/distroless for more details
+# Note: Use gcr.azk8s.cn as repo-mirror if gcr.io is blocked by China GFW.
+FROM gcr.io/distroless/static:latest
+LABEL maintainer "Yanzhe Lee <lee.yanzhe@yanzhe.org>"
 WORKDIR /etc/frp
-
-CMD ./frps -c frps.ini
+COPY --from=downloader /etc/frp .
+ENV PATH /etc/frp:$PATH
+CMD ["frpc", "-c", "frpc.ini"]
