Use distroless/base

--- a/v2ray/Dockerfile
+++ b/v2ray/Dockerfile
@@ -19,7 +19,7 @@ RUN V2RAY_FILE=v2ray-${OS}-${ARCH}.zip \
 # Use distroless as minimal base image to package the executable binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 # Note: Use gcr.azk8s.cn as repo-mirror if gcr.io is blocked by China GFW.
-FROM gcr.io/distroless/static:latest
+FROM gcr.io/distroless/base:latest
 LABEL maintainer "Yanzhe Lee <lee.yanzhe@yanzhe.org>"
 WORKDIR /etc/v2ray
 COPY --from=downloader /etc/v2ray .
