--- a/trojan/docker-compose.yml
+++ b/trojan/docker-compose.yml
@@ -4,13 +4,7 @@ services:
     image: trojangfw/trojan:latest
     container_name: trojan
     restart: always
-    ports:
-      - 443:443
+    network_mode: host
     volumes:
       - ./config.json:/etc/trojan/config.json
       - ./ssl:/etc/trojan/ssl
-    networks:
-      - proxy
-networks:
-  proxy:
-    external: true
