--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   dockergen:
     image: jwilder/docker-gen
-    # network_mode: host
+    network_mode: host
     restart: always
     command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     volumes_from:
