--- a/trojan/docker-compose.yml
+++ b/trojan/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     restart: always
     network_mode: host
     volumes:
-      - ./config.json:/etc/trojan/config.json
+      - ./config.json:/config/config.json
       - ./ssl:/etc/trojan/ssl
