--- a/docker-repo/docker-compose.yml
+++ b/docker-repo/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.6'
+version: '2.4'
 services:
-  docker-mirror:
+  gitlab-mirror:
     image: registry:2
     volumes:
-      - ./repos/docker/data:/var/lib/registry
-      - ./repos/docker/config.yml:/etc/config.yml
+      - ./repos/gitlab/data:/var/lib/registry
+      - ./repos/gitlab/config.yml:/etc/config.yml
     restart: always
     command: /etc/config.yml
     env_file:
-      - ./repos/docker/web.env
+      - ./repos/gitlab/web.env
