--- a/docker-repo/web.env.template
+++ b/docker-repo/web.env.template
@@ -1,4 +1,4 @@
-VIRTUAL_HOST=dockerhub.example.com
+VIRTUAL_HOST=registry.example.com
 VIRTUAL_PORT=5000
 SSL_POLICY=Mozilla-Modern
 HTTPS_METHOD=noredirect
