--- a/seafile-pro/docker-compose.yml
+++ b/seafile-pro/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   db:
     image: mariadb
     container_name: seafile-mysql
+    # network_mode: host
     env_file:
       - db.env
     volumes:
@@ -38,7 +39,8 @@ services:
       - seafile-net
 
   seafile:
-    image: docker.seafile.top/seafileltd/seafile-pro-mc:latest
+    # image: docker.seafile.top/seafileltd/seafile-pro-mc:latest
+    image: leeyanzhe/seafile-pro-mc:7.0.11
     container_name: seafile
     volumes:
       - ./shared:/shared   # Requested, specifies the path to Seafile data persistent store.
