--- a/v2ray/docker-compose.yml
+++ b/v2ray/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: always
     volumes:
       - ./config.json:/etc/v2ray/config.json
+      - /var/run/v2ray:/var/run/v2ray
     env_file:
       - web.env
   v2ray-c:
