--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -6,20 +6,21 @@ services:
     network_mode: host
     restart: always
     volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./certs:/etc/nginx/certs:ro
       - ./conf.d:/etc/nginx/conf.d
 
-  dockergen:
+  dockergen-http:
     image: jwilder/docker-gen
     network_mode: host
     restart: always
-    command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/http-default.conf
     volumes_from:
       - nginx
     volumes:
       - ./conf.d:/etc/nginx/conf.d
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+      - ./nginx-http.tmpl:/etc/docker-gen/templates/nginx.tmpl
     env_file:
       - default.env
