--- a/v2ray/stream.conf
+++ b/v2ray/stream.conf
@@ -23,7 +23,7 @@ server {
         ssl_session_timeout 5m;
         ssl_session_cache shared:SSL_STREAM:50m;
         ssl_session_tickets off;
-        ssl_certificate /etc/nginx/certs/lee-service.com.crt;
-        ssl_certificate_key /etc/nginx/certs/lee-service.com.key;
+        ssl_certificate /etc/nginx/certs/y2y.io.crt;
+        ssl_certificate_key /etc/nginx/certs/y2y.io.key;
         proxy_pass v2ray;
 }
