--- a/trojan/Dockerfile
+++ b/trojan/Dockerfile
@@ -16,7 +16,7 @@
 
 # # Use distroless as minimal base image to package the executable binary
 # # Refer to https://github.com/GoogleContainerTools/distroless for more details
-# # Note: Use gcr.mirrors.ustc.edu.cn as repo-mirror if gcr.io is blocked by China GFW.
+# # Note: Use registry.aliyuncs.com as repo-mirror if gcr.io is blocked by China GFW.
 # FROM gcr.io/distroless/base:latest
 # LABEL maintainer "Yanzhe Lee <lee.yanzhe@yanzhe.org>"
 # WORKDIR /etc/trojan
